--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 <input onclick="btnWork()" type="radio" name="quiz" id="">
                 <label id="opt3" for=""></label>
             </div>
+            <div>
+                <input onclick="btnWork(); resultC(); " type="radio"  name="quiz" id="">
+                <label id="correct" for=""></label>
+            </div>
 
         </div>
         <br><br>
