--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <label id="opt3" for=""></label>
             </div>
             <div>
-                <input onclick="btnWork(); resultC(); " type="radio"  name="quiz" id="">
+                <input onclick="btnWork()" type="radio"  name="quiz" id="">
                 <label id="correct" for=""></label>
             </div>
 
