--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -20,7 +19,7 @@
           <hr class="quiz-divider" />
           <ul class="quiz-list">
             <li>Total Questions: <strong>8</strong> multiple-choice questions</li>
-            <li>Each question carries <strong>12 points</strong> (Max score: <strong>96</strong>)</li>
+            <li>Each question carries <strong>12 points</strong> (Max score: <strong>100</strong>)</li>
             <li>To pass, score at least <strong>70 points</strong></li>
             <li>You have <strong>1 minute</strong> to complete the quiz</li>
             <li>If the timer ends, the quiz auto-submits and shows your result</li>
@@ -36,7 +35,8 @@
     <div class="container">
         <h1>Quiz Application SMIT</h1>
         <hr><br>
-        <div class="timer" id="timer">
+
+        <div class="timer">
             <span class="min">00</span>:<span class="sec">00</span>
           </div>
           
