--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
             </div>
 
             <div>
-                <input onclick="btnWork()" type="radio" name="quiz" id="">
-                <label  id="opt1" for=""> </label>
+                <input onclick="btnWork()" type="radio" name="quiz" id="q1">
+                <label  id="opt1" for="q1"> </label>
             </div>
 
             <div>
-                <input onclick="btnWork()" type="radio" name="quiz" id="">
-                <label id="opt2" for=""></label>
+                <input onclick="btnWork()" type="radio" name="quiz" id="q2">
+                <label id="opt2" for="q2"></label>
             </div>
 
             <div>
-                <input onclick="btnWork()" type="radio" name="quiz" id="">
-                <label id="opt3" for=""></label>
+                <input onclick="btnWork()" type="radio" name="quiz" id="q3">
+                <label id="opt3" for="q3"></label>
             </div>
             <div>
-                <input id="correctOpt" onclick="btnWork()" type="radio"  name="quiz" id="">
-                <label id="correct" for=""></label>
+                <input id="correctOpt" onclick="btnWork()" type="radio"  name="quiz">
+                <label id="correct" for="correctOpt"></label>
             </div>
 
         </div>
